@@ -1,31 +1,61 @@
-# arrow-flight-rpc
+# Arrow Flight RPC Plugin
 
-Enable this transport with:
+The Arrow Flight RPC plugin provides streaming transport for node to node communication in OpenSearch using Apache Arrow Flight protocol. It integrates with the OpenSearch Security plugin to provide secure, authenticated streaming with TLS encryption.
 
-```
-setting 'aux.transport.types',                   '[arrow-flight-rpc]'
-setting 'aux.transport.arrow-flight-rpc.port',   '9400-9500' //optional
-```
+## Installation and Setup
 
-## Testing
+### Development Mode (./gradlew run)
 
-### Unit Tests
+For development using gradle:
 
-```
-./gradlew run \
-    -PinstalledPlugins="['arrow-flight-rpc']" \
-    -Dtests.opensearch.aux.transport.types="[experimental-transport-arrow-flight-rpc]" \
-    -Dtests.opensearch.opensearch.experimental.feature.arrow.streams.enabled=true
+1. Enable feature flag in `opensearch.yml`:
+```yaml
+opensearch.experimental.feature.transport.stream.enabled: true
 ```
 
-### Unit Tests
+2. Run with plugin:
+```bash
+./gradlew run -PinstalledPlugins="['arrow-flight-rpc']"
+```
 
-```
-./gradlew :plugins:arrow-flight-rpc:test
+### Manual Setup
+
+For manual configuration and deployment:
+
+1. Enable feature flag in `opensearch.yml`:
+```yaml
+opensearch.experimental.feature.transport.stream.enabled: true
 ```
 
-### Integration Tests
+2. Add system properties and JVM options:
+```
+-Dio.netty.allocator.numDirectArenas=1
+-Dio.netty.noUnsafe=false
+-Dio.netty.tryUnsafe=true
+-Dio.netty.tryReflectionSetAccessible=true
+--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+```
 
-```
-./gradlew :plugins:arrow-flight-rpc:internalClusterTest
-```
+3. Install and run the plugin manually
+
+## Documentation
+
+For detailed usage and architecture information, see the [docs](docs/) folder:
+
+- [Architecture Guide](docs/architecture.md) - Stream transport architecture and design
+- [Server-side Streaming Guide](docs/server-side-streaming-guide.md) - How to implement server-side streaming
+- [Transport Client Streaming Flow](docs/transport-client-streaming-flow.md) - Client-side streaming implementation
+- [Flight Client Channel Flow](docs/flight-client-channel-flow.md) - Client channel flow details
+- [Metrics](docs/metrics.md) - Monitoring and performance metrics
+- [Error Handling](docs/error-handling.md) - Error handling patterns
+- [Security Integration](docs/security-integration.md) - Security plugin integration and TLS setup
+- [Chaos Testing](docs/chaos.md) - Chaos testing setup and usage
+- [Netty4 vs Flight Comparison](docs/netty4-vs-flight-comparison.md) - Transport classes comparison cheat sheet
+
+## Examples
+
+See the [stream-transport-example](../examples/stream-transport-example/) plugin for a complete example of how to implement streaming transport actions.
+
+## Limitations
+
+- **REST Client Support**: Arrow Flight streaming is not available for REST API clients. It only works for node-to-node transport within the OpenSearch cluster.
